split window.h/cpp
Former-commit-id: 3d29703c005249aa1886a9448aac90e294b26e9c [formerly e1731a6f6826077c2dabb6ea66093cdc6ea8979b] [formerly 3f5f114c18fbde14525bd148ebdb3ce1259004e4 [formerly 916da73147e155db277e0431a85cde099aaa9ab3]] [formerly 7cab332243d7924f6e01de564b58176e3a5de1cc [formerly 46e23739e34559e03fa93409f23342bcfdb961c8] [formerly dea066340012b9bb0e30d3ab09f89197fe430610 [formerly 4eb8dd9468edf749903ab6556755fb0baa45f01a]]] [formerly f99bf3ce31b1baf4b19718c53e1c4e1323e56385 [formerly 3f450cce5374b6a32daae3ae00991abdbfb8b631] [formerly 0971f87cf8157e5ec3230ff02d25562fb530bfae [formerly 4a858841d77e44cb53c4c6301c95fcbe7c144e9c]] [formerly 1c146ac9a54c183d9298f9fca230a9436f34a127 [formerly 496d2fbf6025a25ebec40686692c93ac6e8fd339] [formerly d68f184b4910fed8c3822e4783c8ca210e7974e4 [formerly cc7fe54cb199e4d36bae2767f46ddbce97e7410b]]]] [formerly 676c1419180977c5bb1b39a77cb970d0a4431726 [formerly 502d29891bc570fb498597992643689e04ce9241] [formerly 82d1766f8568f387437c6d4e3cd4848a3bd6c23d [formerly 427a141158298c89465f24d797c50c5073baadb8]] [formerly 901928424e8dfea21daf3fc597515ccbf208ec30 [formerly fce961d4be3752379c7d49df6e8f0bad29281d29] [formerly 47604013d01e7afbc29dcdfebbadecea7570afeb [formerly bbe5e162359dcdbd25ec520ecd08a130eedef092]]] [formerly 5260f4ef99f1c965764ffcea5fe5208c24a3ac63 [formerly 536f56207b0529ef477345ce8833c2ef7e07aa1d] [formerly 90a600732dfd5677c4e198d9f96630122cc368e1 [formerly 1f0490f8186988341b0ec5d4dc8a01d3aa41a756]] [formerly e8f7897e096bb8ff3325ec39343ac32d315a7b6d [formerly f7fef2d2999fde2d74cddd53350ffc9de418e8cc] [formerly a4d6b0ae6a28e22fdf513ca16c07c1f756013f82 [formerly a214b6c0df42a1d93a6f6912fa98f2d2b0af2525]]]]]
Former-commit-id: af58477e57a891c2670f2d1583d37b7b1e27999a [formerly ffa6d3fac61f0d90052260a53b65e420b0b51ab7] [formerly 12b8dde3ea539c3db49f72615e4f16503a191ce0 [formerly f2e6a44834630e2f2e764b6a8679b03b54b980c0]] [formerly cb1ad6ecfdd5a38e0e46e088f0c91a112eda7ef7 [formerly f1283795aa57b35efdda7b0d74399f8605

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required (VERSION 3.1)
 project (Renderer)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+add_definitions("-Wall" "-g")
 
 find_package(OpenGL REQUIRED)
 
@@ -19,8 +23,10 @@ add_subdirectory(thirdparty)
 include_directories(
   thirdparty/glfw-3.3.2/include/
   thirdparty/glew-2.1.0/include/
-  src/
 )
+
+include_directories(${PROJECT_SOURCE_DIR}/src)
+file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 
 set(ALL_LIBS ${OPENGL_LIBRARY} glfw glew)
 
@@ -32,5 +38,5 @@ add_definitions(
   -D_CRT_SECURE_NO_WARNINGS
 )
 
-add_executable(main src/main.cpp)
+add_executable(main ${SRC_FILES})
 target_link_libraries(main ${ALL_LIBS})
