--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 project(renderer C CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_BUILD_TYPE Debug)
-include_directories(".")
 include_directories(thirdparty/glfw/include)
+include_directories(thirdparty/stb/include)
+include_directories(".")
 
 add_subdirectory(thirdparty/glfw)
 add_subdirectory(src)
