--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "thirdparty/stb"]
 	path = thirdparty/stb
 	url = https://github.com/nothings/stb.git
+[submodule "thirdparty/glew-cmake"]
+	path = thirdparty/glew-cmake
+	url = https://github.com/Perlmint/glew-cmake
