--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,17 +17,17 @@ if(NOT OPENGL_FOUND)
   message(ERROR "OPENGL not found!")
 endif(NOT OPENGL_FOUND)
 
-set(glew-cmake_BUILD_SHARED OFF)
-set(glew-cmake_BUILD_STATIC ON)
-set(ONLY_LIBS "Do not build executables" ON)
+set(glew-cmake_BUILD_SHARED OFF CACHE BOOL "Do not build the shared glew library")
+set(glew-cmake_BUILD_STATIC ON CACHE BOOL "Build the static glew library")
+set(ONLY_LIBS ON CACHE BOOL "Do not build executables")
 include_directories(thirdparty/glew-cmake/include)
 add_subdirectory(thirdparty/glew-cmake)
 
-set(BUILD_SHARED_LIBS OFF)
-set(GLFW_BUILD_EXAMPLES OFF)
-set(GLFW_BUILD_TESTS OFF)
-set(GLFW_BUILD_DOCS OFF)
-set(GLFW_INSTALL OFF)
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "Do not build GLFW shared libraries")
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Do not build the GLFW example programs")
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "Do not build the GLFW test programs")
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "Do not build the GLFW documentation")
+set(GLFW_INSTALL OFF CACHE BOOL "Do not generate installation target")
 include_directories(thirdparty/glfw/include)
 add_subdirectory(thirdparty/glfw)
 
